--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,8 +1,10 @@
 ---
-import ViewTransitions from 'astro/components/ViewTransitions.astro';
+import ViewTransitions from "astro/components/ViewTransitions.astro";
+import AsideMenu from "../components/Aside/AsideMenu.astro";
+
 
 interface Props {
-	title: string;
+  title: string;
 }
 
 const { title } = Astro.props;
@@ -10,32 +12,95 @@ const { title } = Astro.props;
 
 <!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="description" content="Spotify Clone " />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<title>{title}</title>
-		<ViewTransitions fallback='none' />
-	</head>
-	<body>
-		<div id="app">
-			<aside>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="description" content="Spotify Clone " />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <title>{title}</title>
+    <ViewTransitions fallback="none" />
+  </head>
+  <body>
+    <div id="app" class="relative h-screen p-2 gap-2">
+      <aside class="[grid-area:aside] flex-col flex overflow-y-auto">
+        <AsideMenu />
+      </aside>
 
-			</aside>
-			<main>
-				<slot />
-			</main>
-			<footer>
+      <main
+        class="[grid-area:main] rounded-lg bg-zinc-900 w-full overflow-hidden hover:overflow-y-auto"
+      >
+        <slot />
+      </main>
 
-			</footer>
-		</div>
-	</body>
+      <footer class="[grid-area:player] h-[70px] z-50">
+        
+      </footer>
+    </div>
+    <style>
+      #app {
+        display: grid;
+        grid-template-areas:
+          "aside main main"
+          "player player player";
+        grid-template-columns: 280px 1fr;
+        grid-template-rows: 1fr auto;
+      }
+    </style>
+
+    <style is:global>
+      html {
+        font-family: "CircularStd", system-ui, sans-serif;
+      }
+      body {
+        margin: 0;
+        padding: 0;
+        background: #000;
+        color: #fff;
+        position: relative;
+      }
+      @font-face {
+        font-family: "CircularStd";
+        src: url("/fonts/CircularStd-Medium.woff2") format("woff2");
+        font-weight: 500;
+        font-style: normal;
+        font-display: swap;
+      }
+
+      @font-face {
+        font-family: "CircularStd";
+        src: url("/fonts/CircularStd-Book.woff2") format("woff2");
+        font-weight: 400;
+        font-style: normal;
+        font-display: swap;
+      }
+
+      @font-face {
+        font-family: "CircularStd";
+        src: url("/fonts/CircularStd-Light.woff2") format("woff2");
+        font-weight: 300;
+        font-style: normal;
+        font-display: swap;
+      }
+
+      @font-face {
+        font-family: "CircularStd";
+        src: url("/fonts/CircularStd-Bold.woff2") format("woff2");
+        font-weight: 700;
+        font-style: normal;
+        font-display: swap;
+      }
+
+      @font-face {
+        font-family: "CircularStd";
+        src: url("/fonts/CircularStd-Black.woff2") format("woff2");
+        font-weight: 900;
+        font-style: normal;
+        font-display: swap;
+      }
+
+      main::-webkit-scrollbar {
+        display: none;
+      }
+    </style>
+  </body>
 </html>
-<style is:global>
-
-	html {
-		font-family: system-ui, sans-serif;
-		background: #000;
-	}
-</style>
